<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/pref_title_settings">
        <SwitchPreference
            android:title="@string/pref_title_recommendations"
            android:defaultValue="true"
            android:key="@string/pref_key_recommendations" />
    </PreferenceCategory>
    <Preference
        android:key="@string/pref_key_login"
        android:title="@string/pref_title_login" />

    <PreferenceCategory
        android:key="advanced"
        android:title="Advanced stuff"
        app:initialExpandedChildrenCount="2">

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>